# FauxPOS

./: CMakeLists.txt
src/: checkout.cpp  checkout.h  main.cpp  mainwindow.cpp  mainwindow.h  newitem.cpp  newitem.h
ui/: checkout.ui  mainwindow.ui  new_item.ui
